...
        IconButton(
            onClick = {
                paused.value = false
                mMediaPlayer?.start()
            },
            modifier = Modifier.semantics {
                testTag = "Play Button"
            }
        ) {
            if (paused.value) {
                Icon(
                    painter = painterResource(id = R.drawable.baseline_play_circle_24),
                    contentDescription = "",
...
                mMediaPlayer?.let {
                    it.seekTo(0)
                    it.pause()
                }
            },
            modifier = Modifier.semantics {
                testTag = "Restart Button"
            }
        ) {
            Icon(
                painter = painterResource(id = R.drawable.baseline_restore_25),
                contentDescription = "",
                modifier = Modifier
...
