...
        val modifier = if (overLineLimit) {
            Modifier
                .semantics { testTag = "Expandable Details Card" }
                .padding(16.dp)
        } else {
            Modifier
                .semantics { testTag = "Expandable Details Card - Clickable" }
                .clickable { isExpanded = !isExpanded }
                .padding(16.dp)
        }

        Column(
            modifier = modifier
...
